[tool.poetry]
name = "cute-little-quokk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cute_little_quokk"}]

[tool.poetry.dependencies]
python = "3.11.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
alembic = "^1.9.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "poetry_scripts.utils:up"
down = "poetry_scripts.utils:down"