[tool.poetry]
name = "cute-little-quokk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "poetry_scripts"}
]

[tool.poetry.dependencies]
python = "3.11.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
alembic = "^1.9.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
httpx = "^0.23.3"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "poetry_scripts.utils:up"
down = "poetry_scripts.utils:down"

[tool.black]
line-length = 101
exclude = ".database"
